--- a/Temperature Forecast ARIMA.ipynb
+++ b/Temperature Forecast ARIMA.ipynb
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -646,30 +646,30 @@
      "output_type": "stream",
      "text": [
       "Performing stepwise search to minimize aic\n",
-      " ARIMA(1,0,1)(0,0,0)[0]             : AIC=2652.236, Time=0.03 sec\n",
-      " ARIMA(0,0,0)(0,0,0)[0]             : AIC=13171.638, Time=0.03 sec\n",
-      " ARIMA(1,0,0)(0,0,0)[0]             : AIC=inf, Time=0.02 sec\n",
-      " ARIMA(0,0,1)(0,0,0)[0]             : AIC=11262.649, Time=0.07 sec\n",
-      " ARIMA(2,0,1)(0,0,0)[0]             : AIC=2648.156, Time=0.11 sec\n",
-      " ARIMA(2,0,0)(0,0,0)[0]             : AIC=inf, Time=0.03 sec\n",
-      " ARIMA(3,0,1)(0,0,0)[0]             : AIC=2643.150, Time=0.08 sec\n",
-      " ARIMA(3,0,0)(0,0,0)[0]             : AIC=inf, Time=0.03 sec\n",
-      " ARIMA(4,0,1)(0,0,0)[0]             : AIC=2204.273, Time=0.30 sec\n",
-      " ARIMA(4,0,0)(0,0,0)[0]             : AIC=inf, Time=0.04 sec\n",
-      " ARIMA(5,0,1)(0,0,0)[0]             : AIC=2146.640, Time=0.50 sec\n",
+      " ARIMA(1,0,1)(0,0,0)[0]             : AIC=2652.236, Time=0.04 sec\n",
+      " ARIMA(0,0,0)(0,0,0)[0]             : AIC=13171.638, Time=0.01 sec\n",
+      " ARIMA(1,0,0)(0,0,0)[0]             : AIC=inf, Time=0.03 sec\n",
+      " ARIMA(0,0,1)(0,0,0)[0]             : AIC=11262.649, Time=0.08 sec\n",
+      " ARIMA(2,0,1)(0,0,0)[0]             : AIC=2648.156, Time=0.09 sec\n",
+      " ARIMA(2,0,0)(0,0,0)[0]             : AIC=inf, Time=0.04 sec\n",
+      " ARIMA(3,0,1)(0,0,0)[0]             : AIC=2643.150, Time=0.17 sec\n",
+      " ARIMA(3,0,0)(0,0,0)[0]             : AIC=inf, Time=0.05 sec\n",
+      " ARIMA(4,0,1)(0,0,0)[0]             : AIC=2204.273, Time=0.68 sec\n",
+      " ARIMA(4,0,0)(0,0,0)[0]             : AIC=inf, Time=0.07 sec\n",
+      " ARIMA(5,0,1)(0,0,0)[0]             : AIC=2146.640, Time=0.82 sec\n",
       " ARIMA(5,0,0)(0,0,0)[0]             : AIC=inf, Time=0.13 sec\n",
-      " ARIMA(6,0,1)(0,0,0)[0]             : AIC=2101.144, Time=0.92 sec\n",
-      " ARIMA(6,0,0)(0,0,0)[0]             : AIC=inf, Time=0.09 sec\n",
-      " ARIMA(7,0,1)(0,0,0)[0]             : AIC=2091.491, Time=1.14 sec\n",
-      " ARIMA(7,0,0)(0,0,0)[0]             : AIC=inf, Time=0.44 sec\n",
-      " ARIMA(8,0,1)(0,0,0)[0]             : AIC=2028.546, Time=1.35 sec\n",
-      " ARIMA(8,0,0)(0,0,0)[0]             : AIC=inf, Time=0.48 sec\n",
-      " ARIMA(8,0,2)(0,0,0)[0]             : AIC=inf, Time=1.77 sec\n",
-      " ARIMA(7,0,2)(0,0,0)[0]             : AIC=inf, Time=1.65 sec\n",
-      " ARIMA(8,0,1)(0,0,0)[0] intercept   : AIC=2191.707, Time=2.60 sec\n",
+      " ARIMA(6,0,1)(0,0,0)[0]             : AIC=2101.144, Time=1.31 sec\n",
+      " ARIMA(6,0,0)(0,0,0)[0]             : AIC=inf, Time=0.20 sec\n",
+      " ARIMA(7,0,1)(0,0,0)[0]             : AIC=2091.491, Time=1.69 sec\n",
+      " ARIMA(7,0,0)(0,0,0)[0]             : AIC=inf, Time=0.59 sec\n",
+      " ARIMA(8,0,1)(0,0,0)[0]             : AIC=2028.546, Time=1.93 sec\n",
+      " ARIMA(8,0,0)(0,0,0)[0]             : AIC=inf, Time=0.65 sec\n",
+      " ARIMA(8,0,2)(0,0,0)[0]             : AIC=inf, Time=2.60 sec\n",
+      " ARIMA(7,0,2)(0,0,0)[0]             : AIC=inf, Time=2.40 sec\n",
+      " ARIMA(8,0,1)(0,0,0)[0] intercept   : AIC=2191.707, Time=3.12 sec\n",
       "\n",
       "Best model:  ARIMA(8,0,1)(0,0,0)[0]          \n",
-      "Total fit time: 11.811 seconds\n"
+      "Total fit time: 16.738 seconds\n"
      ]
     },
     {
@@ -678,7 +678,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -713,8 +713,40 @@
    "metadata": {},
    "source": [
     "Woah Woah. Stephan said that this data would flatten out mathematically and it happens so. But, our actual forcast should not flatten out. Forecasting constant values will not add any value.   \n",
-    "Fortunately, I could reach out to Stephan and he suggest me other models that can be implemented and have better performance. A lot more to implment and learn from. \n",
-    "\n",
+    "Fortunately, I could reach out to Stephan and he suggest me other models that can be implemented and have better performance. A lot more to implment and learn from. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'8-0-5': 0.4764750789589308,\n",
+       " '4-0-5': 0.43142053654648016,\n",
+       " 'autoModel': 0.6166126079704077}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# compute the mean squared error across models\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "mseDict = {}\n",
+    "for col in testData.columns[1:]:\n",
+    "    mseDict[col] = mean_squared_error(testData['AverageTemperature'], testData[col])\n",
+    "mseDict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Concluding this one here.\n",
     "- ARIMA is a benchmark model but it is practically tough to identify the optimal order. \n",
     "- Our forcast will flatten out and this is not what we want.\n",
@@ -724,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +770,7 @@
       "[NbConvertApp] Making directory README_files\n",
       "[NbConvertApp] Making directory README_files\n",
       "[NbConvertApp] Making directory README_files\n",
-      "[NbConvertApp] Writing 16744 bytes to README.md\n"
+      "[NbConvertApp] Writing 16993 bytes to README.md\n"
      ]
     }
    ],
